# ai-learning

./: README.md  app.py  ollama.py  streamlit.py
jira-consumer/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
jira-consumer/app/: main.py
jira-consumer/app/clients/: jira_client.py
jira-consumer/app/consumers/: jira_consumer.py
jira-consumer/app/core/: config.py  logging.py
jira-consumer/app/models/: jira_event.py
jira-consumer/docs/: ARCHITECTURE_DIAGRAM.md  DRAWIO_INSTRUCTIONS.md  JIRA_PHASE1_COMPLETE.md  JIRA_SERVICE_DESIGN.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md
jira-consumer/tests/unit/: test_jira_client.py
webhook/: .env.example  .gitignore  CLEANUP_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  docker-compose.yml  pyproject.toml  requirements.txt  sample-jira-output.json  test_payload.json
webhook/app/: __init__.py  config.py  kafka_producer.py  main.py  models.py
webhook/app/api/: __init__.py  dependencies.py
webhook/app/api/v1/: __init__.py  router.py
webhook/app/api/v1/endpoints/: __init__.py  health.py  webhooks.py
webhook/app/core/: __init__.py  config.py
webhook/app/models/: __init__.py  jira.py
webhook/app/schemas/: __init__.py  health.py  webhook.py
webhook/app/services/: __init__.py  kafka_service.py  webhook_service.py
webhook/docs/architecture/: CONSUMER_ARCHITECTURE_PLAN.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_PART2.md  QUICK_START_GUIDE.md
webhook/docs/development/: CLEANUP_SUMMARY.md  FOLDER_STRUCTURE.md  REFACTORING_SUMMARY.md
webhook/docs/guides/: DEBUGGING_GUIDE.md
webhook/tests/: __init__.py  conftest.py
webhook/tests/integration/: __init__.py  test_api.py
webhook/tests/unit/: __init__.py  test_models.py
