[tool.poetry]
name = "jira-consumer"
version = "1.0.0"
description = "Kafka consumer for Jira events to LangGraph"
authors = ["Charles Amper <charles@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
kafka-python = "^2.0.2"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
httpx = "^0.25.0"
tenacity = "^8.2.3"
python-dotenv = "^1.0.0"
prometheus-client = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



